# Genie

./: CMakeLists.txt  README.md  package.xml
Apps/: CMakeLists.txt
Apps/src/: GenieApp.cpp  GenieCalib.cpp
GenieLib/: CMakeLists.txt
GenieLib/include/: AD_130GE.h  Camera.h  GenieNano.h  Parameter.h
cmake/Modules/: FindCVB.cmake
genie_ros/: CMakeLists.txt  package.xml
genie_ros/src/: genie_ros_node.cpp
